# cursos

aspnet-core/: .gitignore
django/website-django/: pyproject.toml  requirements.dev.txt  requirements.txt
django/website-django/base/global/: base.html
django/website-django/blog/: urls.py
django/website-django/blog/templates/blog/: index.html
django/website-django/core/: settings.py  urls.py
django/website-django/home/templates/home/: index.html
flutter/: .gitignore
flutter/intl_flutter/: pubspec.yaml
flutter/loja_virtual/lib/screens/: login_screen.dart
nodejs/: .gitignore
php/: .gitignore
reactjs/: .gitignore
tdd-xunit/: .gitignore
xamarin-forms/: .gitignore
